--- a/Diplom_Yspevaemost/App.config
+++ b/Diplom_Yspevaemost/App.config
@@ -2,11 +2,11 @@
 <configuration>
     <configSections>
     </configSections>
-    <connectionStrings>
-        <add name="Diplom_Yspevaemost.Properties.Settings.Diplom_YspevaemostConnectionString"
-            connectionString="Data Source=WIN-RGCFO3057QU;Initial Catalog=Diplom_Yspevaemost;Integrated Security=True"
-            providerName="System.Data.SqlClient" />
-    </connectionStrings>
+	<connectionStrings>
+		<add name="Diplom_Yspevaemost.Properties.Settings.Diplom_YspevaemostConnectionString"
+			 connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\Diplom_Yspevaemost.mdf;Integrated Security=True;Connect Timeout=30"
+			 providerName="System.Data.SqlClient" />
+	</connectionStrings>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
     </startup>
